--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -12,7 +12,7 @@
             font-family: 'Roboto', sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #2C346B;
+            background-color: #2c2c54;
             /* Dark background matching palette */
             color: #FFFFFF;
             /* Light text */
