--- a/views/success.ejs
+++ b/views/success.ejs
@@ -14,7 +14,7 @@
             justify-content: center;
             align-items: center;
             height: 100vh;
-            background-color: #f9f9f9;
+            background-color: #2c2c54;
         }
         .success-container {
             text-align: center;
