--- a/views/forgotpassword.ejs
+++ b/views/forgotpassword.ejs
@@ -7,6 +7,7 @@
     <title>Bookstore - Login</title>
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <style>
         body {
             font-family: 'Roboto', sans-serif;
@@ -118,13 +119,17 @@
                 type: 'POST',
                 contentType: 'application/json',
                 data: JSON.stringify(data),
-                success: function (response) {
-                    console.log(response);
-                    window.location.href = "http://localhost:8001/reset-code"
+                success: function () {
+                    swal({
+                            title: "Link Sent to The Mail",
+                            icon: "success"
+                        })
                 },
                 error: function (xhr, status, error) {
-                    console.error('Error:', error);
-                    alert('Failed to send email. Please try again.');
+                    swal({
+                            title: "Failed to send the Mail",
+                            icon: "error"
+                        })
                 }
             });
         });
