--- a/views/resetpassword.ejs
+++ b/views/resetpassword.ejs
@@ -5,6 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Reset Password</title>
+  <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -68,7 +69,7 @@
 <body>
   <form action="" method="POST">
     <h2>Reset Password</h2>
-    <input type="password" name="password" id="password" placeholder="New Password" required>
+    <input type="password" name="newPassword" id="newPassword" placeholder="New Password" required>
     <input type="password" name="confirmPassword" id="confirmPassword" placeholder="Confirm Password" required>
     <button type="submit" id="submit">Reset Password</button>
   </form>
@@ -76,19 +77,23 @@
 <script>
   $(document).on('click', '#submit', function (e) {
     e.preventDefault();
+    const urlParams = new URLSearchParams(window.location.search);
+    const resetToken = window.location.pathname.split('/').pop();
+    console.log(resetToken);
     const data = {
-      newPassword: document.getElementById('password').value
+      newPassword: document.getElementById('newPassword').value,
+      // confirmPassword: document.getElementById('confirmPassword').value
     };
-    console.log(data);
+    // console.log(data);
     $.ajax({
-      url: `http://localhost:8001/reset-password`,
+      url: `http://localhost:8001/reset-password/${resetToken}`,
       type: 'POST',
       contentType: 'application/json',
       data: JSON.stringify(data),
-      success: function (response) {
-        console.log(response);
-        window.location.href = "http://localhost:8001/"
-      },
+      success: swal({
+        title: "Password Updated Successfully",
+        icon: "success"
+      }),
       error: function (xhr, status, error) {
         console.error('Error:', error);
         alert('Failed to Set Password Please try again.');
