--- a/views/users/userTable.ejs
+++ b/views/users/userTable.ejs
@@ -10,10 +10,7 @@
                         <tr>
                             <th>ID.</th>
                             <th>Name</th>
-                            <!-- <th>LastName</th> -->
                             <th>Email</th>
-                            <!-- <th>Number</th> -->
-                            <!-- <th>Image</th> -->
                         </tr>
                     </thead>
                     <tbody>
@@ -90,16 +87,8 @@
                             return meta.row + meta.settings._iDisplayStart + 1;
                         }
                     },
-                    { "data": "Name" },
-                    // { "data": "lastName" },
-                    { "data": "email" },
-                    // { "data": "phoneNumber" },
-                    // {
-                    //     "data": "image",
-                    //     "render": function (data) {
-                    //         return data == null ? 'No Image' : `<img src="${'<%= process.env.BASE_URL %>'}:${'<%= process.env.PORT %>'}/${data}">`
-                    //     }
-                    // }
+                    { "data": "name" },
+                    { "data": "email" }
                 ]
             });
         });
